--- a/index.html
+++ b/index.html
@@ -2512,7 +2512,7 @@
           <section class="header__main">
             <div class="header__main--content">
               <h1 class="std-title theme--text">
-                Buy, trade, and hold 350+ cryptocurrencies on Binance
+                Compre, Intercambie y mantenga mas de 350 criptomonedas en Binance
               </h1>
               <div class="header__main--content__trade">
                 <img src="./assets/images/svgexport-65.svg" alt="Gift" />
