Se cambio el texto del encabezado (Buy Crypto) a (Comprar Criptomonedas)

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
         <div
           class="navigation__main--item navigation__main--item--buy-crypto-hov"
         >
-          <span>Buy Crypto</span>
+          <span>Comprar Cripomonedas</span>
           <svg
             xmlns:xlink="http://www.w3.org/1999/xlink"
             xmlns="http://www.w3.org/2000/svg"
